# Inlamning-AI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  prompt.txt
scr/: DatabaseManager.cpp  DatabaseManager.h  TUI.cpp  TUI.h  main.cpp
scripts/: kontaktbok.sql
